--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="tab_item_contacts">Контакты</string>
 
     <string name="new_object">Новый объект</string>
+    <string name="new_event">Новое событие</string>
     <string name="new_client">Новый клиент</string>
 
     <string name="nameobject_hint_name">Название объекта</string>
@@ -28,8 +29,12 @@
     <string name="nameevent_hint_client">Клиент</string>
     <string name="nameevent_hint_type">Тип события</string>
     <string name="nameevent_hint_name">Имя события</string>
+    <string name="nameevent_hint_date">Дата</string>
+    <string name="nameevent_hint_time">Время</string>
     <string name="nameevent_hint_place">Место</string>
     <string name="nameevent_hint_info">Инфо</string>
+
+    <string name="menu_delete">Удалить</string>
 
 
 </resources>
