--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,6 +39,7 @@
     <string name="nameevent_hint_time">Время</string>
     <string name="nameevent_hint_place">Место</string>
     <string name="nameevent_hint_info">Инфо</string>
+    <string name="findclient_hint_info">Информация о нужном объекте</string>
 
     <string name="menu_delete">Удалить</string>
     <string name="menu_edit">Редактировать</string>
